<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_optimizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mamoru.sobue@tier4.jp">msobue</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>
  
  <depend>autoware_auto_planning_msgs</depend>
  <depend>libeigen3-dev</depend>
  <depend>rclcpp</depend>
  <depend>osqp_interface</depend>
  <depend>interpolation</depend>
  <depend>motion_utils</depend>
  <depend>vehicle_info_util</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>nav_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>builting_interfaces</depend>
  <depend>motion_velocity_smoother</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
